# pulse

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 2b5390cc0e05_add_avatar_url_to_users.py  8f0ec67c5ace_user_table.py  ad105c35a38d_create_user_table.py
src/: __init__.py  config.py  exceptions.py  middleware.py
src/auth/: dependencies.py  routes.py  schemas.py  service.py  utils.py
src/core/: redis.py  worker.py
src/db/: session.py
src/mail/: config.py  service.py  utils.py
src/monitor/: routes.py  services.py
src/probe/: routes.py
src/public_tools/: services.py  utils.py
src/templates/: welcome.html
src/users/: models.py  schemas.py  service.py
tests/: test_auth_routes.py  test_monitor_api.py  test_oauth_google.py
